fix: header rows to both align centered, added margin top, changed body top padding to rem from %, added zero margin and padding to header row.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     color:white;
     height: 100vh;
     margin-left: 10px;
-    padding-top: 10%;
+    padding-top: 6rem;
 }
 .page-title {
     font-size: 1.3rem;
@@ -22,11 +22,18 @@ h3 {
 /*Header*/
 #header {
     position: fixed;
-    top: 0%;
+    top: 0;
     width: 95%;
+    height: auto;
     background-color: black;
-    z-index: 999;
+    z-index: 9999;
 }
+#header .row {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 0;
+}
+
 #logo {
     font-family: "Protest Revolution", sans-serif;
     color: #11ED73;
@@ -42,7 +49,7 @@ h3 {
 .nav {
     display: flex;
     justify-content: space-between;
-    padding: 0.5rem;
+    background-color: black;
 }
 .nav-link {
     color: #11ED73;
@@ -54,9 +61,9 @@ h3 {
 }
 
 /*Carousel*/
-#carousel {
+/*#carousel {
     padding-top: 20%;
-}
+}*/
 .c-item {
     position: relative;
     display: flex;
@@ -179,6 +186,9 @@ h3 {
 
 /*2 Small mobile devices (phones, 360px and above)*/
 @media screen and (min-width: 360px) {
+    body {
+        padding-top: 7rem;
+    }
     #logo {
         font-size: 1.5rem;
     }
@@ -187,6 +197,9 @@ h3 {
     }
     .page-title {
         font-size: 1.3rem;
+    }
+    .nav-link {
+        font-size: 0.9rem;
     }
     .c-item {
         padding: 0.7rem;
@@ -209,13 +222,19 @@ h3 {
 /*3 Small devices (portrait tablets and large phones, 576px and up)*/
 @media screen and (min-width: 576px) {
     #logo {
-        font-size: 2.3rem;;
+        font-size: 2.3rem;
+    }
+    #header {
+        height: 3rem;
     }
     .header-img {
         height: 3.9rem;
     }
     .page-title {
         font-size: 1.5rem;
+    }
+    .nav-link {
+        font-size: 1rem;
     }
     .c-item {
         padding: 0.8rem;
@@ -237,14 +256,23 @@ h3 {
   
 /*4 Medium devices (landscape tablets, 768px and up)*/
 @media screen and (min-width: 768px) {
+    body {
+        padding-top: 8rem;
+    }
     #logo {
-        font-size: 2.7rem;;
+        font-size: 2.7rem;
+    }
+    #header {
+        height: 5rem;
     }
     .header-img {
         height: 4.2rem;
     }
     .page-title {
         font-size: 1.6rem;
+    }
+    .nav-link {
+        font-size: 1rem;
     }
     .c-item {
         padding: 0.9rem;
@@ -270,13 +298,13 @@ h3 {
         font-size: 1.1rem;
     }
     #logo {
-        font-size: 2.8rem;;
+        font-size: 2.8rem;
+    }
+    #header {
+        height: 4rem;
     }
     .header-img {
         height: 4.3rem;
-    }
-    .header-item {
-        font-size: 1.3rem;
     }
     .page-title {
         font-size: 1.7rem;
@@ -310,11 +338,11 @@ h3 {
     .header-img {
         height: 4.4rem;
     }
-    .header-item {
-        font-size: 1.5rem;
-    }
     .page-title {
         font-size: 1.8rem;
+    }
+    .nav-link {
+        font-size: 1.2rem;
     }
     .c-item {
         padding: 1.1rem;
@@ -343,9 +371,6 @@ h3 {
     }
     .header-img {
         height: 4.5rem;
-    }
-    .header-item {
-            font-size: 3rem;
     }
     .page-title {
         font-size: 1.9rem;
